# app/Models/User.php
@@ -7,6 +7,7 @@ use Database\Factories\UserFactory;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use App\Enums\Role;
 
 use Tymon\JWTAuth\Contracts\JWTSubject;
 
@@ -23,8 +24,11 @@ class User extends Authenticatable implements JWTSubject
     protected $fillable = [
         'name',
         'email',
+        'phone',
+        'role',
         'password',
         'profile_image',
+        'is_new_user',
     ];
 
     /**
@@ -56,6 +60,7 @@ class User extends Authenticatable implements JWTSubject
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'role' => Role::class,
         ];
     }
 
@@ -91,5 +96,10 @@ class User extends Authenticatable implements JWTSubject
         }
 
         return null;
+    }
+
+    public function payments()
+    {
+        return $this->hasMany(Payment::class);
     }
 }
